fixed overlay issue with navbar (z-index)

--- a/HTPC/styles/nav_bar.css
+++ b/HTPC/styles/nav_bar.css
@@ -2,6 +2,7 @@ header{
     position: -webkit-sticky; /* first two lines make navbar stay in same position while scrolling across different browsers */
     position: sticky;
     top: 0; /* stick to top of viewport */
+    z-index: 1000;
 }
 
 /* mobile first approach, organize flex items by col on mobile, then by row if on larger screen */
